[package]
name = "grok-glow"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { version = "0.7.2", features = ["glutin"] }
glutin = "0.26"
image = "0.23"
memoffset = "0.6"
